@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_073022_3 - Normalized mouse input across platforms.
+
 saw_073022_2 - Mouse input on Windows.
 
 saw_073022_1 - Input wrangling and exception propagation.
